tests/ui/parser/pragma_unknown.stderr
error: unknown pragma
  --> $DIR/pragma_unknown.sol:2:1
   |
LL | pragma foo bar;
   | ^^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> $DIR/pragma_unknown.sol:4:1
   |
LL | pragma amogus;
   | ^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> $DIR/pragma_unknown.sol:6:1
   |
LL | pragma amogus sus;
   | ^^^^^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> $DIR/pragma_unknown.sol:8:1
   |
LL | pragma amogus 69;
   | ^^^^^^^^^^^^^^^^^
   |

error: unknown pragma
  --> $DIR/pragma_unknown.sol:10:1
   |
LL | pragma amogus 69 diwqbn9ru3b2q945 390ru31290r 0qjr09wadm;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: aborting due to 5 previous errors

