tests/ui/parser/pragma_unknown.sol

pragma foo bar;
//~^ ERROR: unknown pragma
pragma amogus;
//~^ ERROR: unknown pragma
pragma amogus sus;
//~^ ERROR: unknown pragma
pragma amogus 69;
//~^ ERROR: unknown pragma
pragma amogus 69 diwqbn9ru3b2q945 390ru31290r 0qjr09wadm;
//~^ ERROR: unknown pragma
pragma amogus 0.8.15;
//~^ ERROR: unknown pragma